--- a/python/pandas/4. Filtering.ipynb
+++ b/python/pandas/4. Filtering.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "8217ea53",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
